--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		<h1>Brian's Web Services</h1>
-		<p>This is the world headquarters of Brian</p>
-	</body>
-	</html>
+<head>
+	<title>Brian's First Site</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<h1>Brian's Web Services</h1>
+	<p>This is Brian's first site and official world headquarters.</p>
+	<p>Check out my instagram <a href="http://zh.ink361.com/app/users/4024172287/brian.rawn/photos">here</a>.</p>
+</body>
+</html>
