Synching my repository

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,6 +7,6 @@
 <body>
 	<h1>Brian's Web Services</h1>
 	<p>This is Brian's first site and official world headquarters.</p>
-	<p>Check out my instagram <a href="http://zh.ink361.com/app/users/4024172287/brian.rawn/photos">here</a>.</p>
+	<p>Check out my instagram <a href="http://zh.ink361.com/app/users/4024172287/brian.rawn/photos">here</a>!</p>
 </body>
 </html>
