--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brian's First Site</title>
+	<title>Brian's First Website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Brian's Web Services</h1>
-	<p>This is Brian's first site and official world headquarters.</p>
-	<p>Check out my instagram <a href="http://zh.ink361.com/app/users/4024172287/brian.rawn/photos">here</a>!</p>
+	<h1>HELLO WORLD.</h1>
+	<p>THIS IS BRIAN"S FIRST WEBSITE, AND HOPEFULLY NOT HIS LAST.</p>
+	<p>FIND ME ON INSTAGRAM <a href="http://zh.ink361.com/app/users/4024172287/brian.rawn/photos">HERE</a>!</p>
 </body>
 </html>
