--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" height="20px" width="100px">
 </head>
 <body>
-	<img src="rawnb.github.io/unit_3/images/logo.jpeg"
+	<img src="https://github.com/rawnb/rawnb.github.io/blob/master/unit_3/images/croppedlogo.jpg"
 		alt="Inkwell Logo"
 		title="Inkwell"
 		style="width:300 px;height:200px">
