--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Inkwell</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css" height="20px" width="100px">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<img src="images/croppedlogo.jpg"
